@@ -38,13 +38,13 @@ pkglibdir = $(libdir)/gcmtool
 pkgincludedir = $(includedir)/gcmtool
 top_builddir = .
 
-ACLOCAL = ${SHELL} /home/spike/cvs/gcmtool/missing --run aclocal-1.6
-AUTOCONF = ${SHELL} /home/spike/cvs/gcmtool/missing --run autoconf
-AUTOMAKE = ${SHELL} /home/spike/cvs/gcmtool/missing --run automake-1.6
-AUTOHEADER = ${SHELL} /home/spike/cvs/gcmtool/missing --run autoheader
+ACLOCAL = ${SHELL} /Users/spike/cvs/gcmtool/missing --run aclocal-1.6
+AUTOCONF = ${SHELL} /Users/spike/cvs/gcmtool/missing --run autoconf
+AUTOMAKE = ${SHELL} /Users/spike/cvs/gcmtool/missing --run automake-1.6
+AUTOHEADER = ${SHELL} /Users/spike/cvs/gcmtool/missing --run autoheader
 
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
-INSTALL = /bin/install -c
+INSTALL = /usr/bin/install -c
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_DATA = ${INSTALL} -m 644
 install_sh_DATA = $(install_sh) -c -m 644
@@ -63,8 +63,8 @@ POST_UNINSTALL = :
 EXEEXT = 
 OBJEXT = o
 PATH_SEPARATOR = :
-AMTAR = ${SHELL} /home/spike/cvs/gcmtool/missing --run tar
-AWK = gawk
+AMTAR = ${SHELL} /Users/spike/cvs/gcmtool/missing --run tar
+AWK = awk
 CC = gcc
 DEPDIR = .deps
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
@@ -73,7 +73,7 @@ STRIP =
 VERSION = 0.3.2
 am__include = include
 am__quote = 
-install_sh = /home/spike/cvs/gcmtool/install-sh
+install_sh = /Users/spike/cvs/gcmtool/install-sh
 EXTRA_DIST = reconf
 SUBDIRS = src
 subdir = .
